--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:8000
+REACT_APP_API_URL=https://vr-automations-test-backend.onrender.com
 REACT_APP_REFRESH_INTERVAL=1800000
